--- a/README.html
+++ b/README.html
@@ -1,5 +1,7 @@
 # Hello World
 
+This script is a oneliner that renders a HTML document that contains markdown as HTML.
+
 This is **bold** and this is *italic*.
 
 - Item 1
@@ -11,5 +13,7 @@ console.log("markdown rendered!");
 ```
 
 Check the source code of this HTML. You'll be surprised.
+
+I hope that at some point in the future, browsers will build this in.
 
 <script src="mdashtml.js"></script>
