--- a/README.html
+++ b/README.html
@@ -16,4 +16,4 @@ Check the source code of this HTML. You'll be surprised.
 
 I hope that at some point in the future, browsers will build this in.
 
-<script src="mdashtml.js"></script>
+<script src="https://rendermd.com/lib.js"></script>
