--- a/md-as-html.html
+++ b/md-as-html.html
@@ -10,6 +10,8 @@ This is **bold** and this is *italic*.
 console.log("markdown rendered!");
 ```
 
+This is the more simple approach, requiring a bit more tokens to be appended.
+
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script>
     document.body.innerHTML = marked.parse(document.body.textContent);
